# QuantBot-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  README_Version12.md  pyproject.toml  quantbot-ai-fin.ipynb  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  project-notes.md
quantbot_ai/: __init__.py  agents.py  config.py  data.py  envs.py  main.py  metrics.py  plots.py  training.py
tests/: test_agent.py  test_data.py  test_env.py  test_metrics.py
